--- a/src/app/my-tile/my-tile.component.html
+++ b/src/app/my-tile/my-tile.component.html
@@ -9,7 +9,7 @@
 
   <p>
     <a
-      href="https://apidocs.sky.blackbaud.com/docs/addins"
+      href="https://developer.blackbaud.com/skyapi/docs/addins"
       target="_blank"
       rel="noopener noreferrer"
       class="sky-btn sky-btn-primary"
